--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -6,3 +6,10 @@
 .transparent2
   border-bottom: 1px solid #afafaf
   border-radius: 0 !important
+
+.fa-chevron-right
+  color: $color-acento-botones
+
+.cajon.color-acento-contenido
+  background-color: #c3ebf5
+  
