--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,7 +54,7 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #91b3fa
+$color-primario: #522981
 $color-secundario: #7DD3E9
 $color-acento-contenido: #57DBD8
 $color-acento-botones: #FE7062
