--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -55,7 +55,7 @@ $color-institucional: #ff8f00
 // Colores Curso ---------------------------------------
 
 $color-primario: #522981
-$color-secundario: #7DD3E9
+$color-secundario: #1a0f91
 $color-acento-contenido: #57DBD8
 $color-acento-botones: #FE7062
 
