--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,6 +1,6 @@
 .transparent1
-  border-top: 1px solid #afafaf
-  border-bottom: 1px solid #afafaf
+  border-top: 2px solid #afafaf
+  //border-bottom: 2px solid #afafaf
   border-radius: 0 !important
 
 .transparent2
@@ -37,3 +37,73 @@ $gradiente1: $azulClarito 0%, $azulOscuro 100%
 
 .tarjeta--azul
   background-color: #f2f6fe
+
+.arrow-crd
+  position: relative
+  height: 100%  
+  &::before
+    content: ""
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: #F2F6FE
+    border-radius: 12px
+    z-index: 0  
+  &__header--azul
+    position: relative
+    padding: 1rem
+    background-color: #91B3FA
+    border-top-left-radius: 12px
+    border-top-right-radius: 12px    
+    p
+      font-size: 35pt
+      font-weight: 800
+      text-align: center
+      margin: 0
+      color: #ffffff
+    &::before
+      content: ""
+      position: absolute
+      bottom: -15px
+      left: 50%
+      transform: translateX(-50%)
+      border-top: solid 15px #91B3FA
+      border-left: solid 15px transparent
+      border-right: solid 15px transparent
+      z-index: 2
+      &:nth-child(odd)
+  &__header
+    position: relative
+    padding: 1rem
+    background-color: #57DBD8
+    border-top-left-radius: 12px
+    border-top-right-radius: 12px    
+    p
+      font-size: 35pt
+      font-weight: 800
+      text-align: center
+      margin: 0
+      color: #ffffff
+    &::before
+      content: ""
+      position: absolute
+      bottom: -15px
+      left: 50%
+      transform: translateX(-50%)
+      border-top: solid 15px #57DBD8
+      border-left: solid 15px transparent
+      border-right: solid 15px transparent
+      z-index: 2
+      &:nth-child(odd)
+
+  
+
+  &__body   
+    position: relative
+    padding: 1.5rem
+    p 
+      text-align: center
+      font-weight: bold
+
