--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -11,7 +11,7 @@
   color: $color-acento-botones
 
 .cajon.color-acento-contenido
-  background-color: #c3ebf5
+  background-color: #d5fffe
   
 .tarjeta--tabla
   padding: 0 !important
@@ -107,3 +107,5 @@ $gradiente1: $azulClarito 0%, $azulOscuro 100%
       text-align: center
       font-weight: bold
 
+.lista-ol--cuadro__vineta
+  background-color: $color-acento-botones
