--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -109,3 +109,21 @@ $gradiente1: $azulClarito 0%, $azulOscuro 100%
 
 .lista-ol--cuadro__vineta
   background-color: $color-acento-botones
+
+.separador-custom
+  position: relative  
+  width: 85%
+  height: 3px 
+  margin: 60px 0
+  left: 50%
+  transform: translateX(-50%)    
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, #c2c2c2 50%, rgba(255,255,255,1) 100%);
+  &::before
+    content: ""
+    position: absolute
+    top: 2px
+    left: 0
+    width: 100%
+    height: 4px
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, #f0f0f0 50%, rgba(255,255,255,1) 100%);
+    z-index: 9
