--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,3 +1,7 @@
+
+.banner-interno__titulo__icono
+  background-color: #FFFFFF !important
+
 .transparent1
   border-top: 2px solid #afafaf
   //border-bottom: 2px solid #afafaf
@@ -38,6 +42,7 @@ $gradiente1: $azulClarito 0%, $azulOscuro 100%
 .tarjeta--azul
   background-color: #f2f6fe
 
+//tarjetas cortas verticales
 .arrow-crd
   position: relative
   height: 100%  
