--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,6 +2,8 @@
 .banner-interno__titulo__icono
   background-color: #FFFFFF !important
 
+
+
 .transparent1
   border-top: 2px solid #afafaf
   //border-bottom: 2px solid #afafaf
@@ -132,3 +134,9 @@ $gradiente1: $azulClarito 0%, $azulOscuro 100%
     height: 4px
     background: linear-gradient(90deg, rgba(255,255,255,1) 0%, #f0f0f0 50%, rgba(255,255,255,1) 100%);
     z-index: 9
+
+
+// Linea de tiempoD(PASOS) tema$
+.linea-tiempo-d.color-acento-contenido .linea-tiempo-d__item--selected .linea-tiempo-d__item__number 
+    background-color: #91B3FA
+    color: #ffffff
